@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-03T01:03:32Z",
-  "count" : 225,
+  "timestamp" : "2024-02-03T08:17:30Z",
+  "count" : 133,
   "count_minmax" : [ 113, 302 ],
-  "count_decinc" : [ -77, +302 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 3, 4 ],
-  "uniques_decinc" : [ -1, +4 ]
+  "count_decinc" : [ -169, +302 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -2, +4 ]
 }
