@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-02-03T01:03:32Z",
+  "timestamp" : "2024-02-03T08:17:30Z",
   "count_outdated" : 184321,
   "uniques_outdated" : 1902,
-  "count" : 188529,
-  "uniques" : 1935,
+  "count" : 188641,
+  "uniques" : 1937,
   "clones" : [
     {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 225,
+      "count": 133,
       "count_minmax": [ 113, 302 ],
-      "count_decinc": [ 77, 302 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 1, 4 ]
+      "count_decinc": [ 169, 302 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 4 ],
+      "uniques_decinc": [ 2, 4 ]
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 301,
       "count_minmax": [ 112, 301 ],
       "count_decinc": [ 0, 301 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-02-03T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
