@@ -1,11 +1,11 @@
 {
-  "count": 4131,
-  "uniques": 6,
+  "count": 4151,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 225,
-      "uniques": 3
+      "count": 133,
+      "uniques": 2
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-02-02T00:00:00Z",
       "count": 301,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-02-03T00:00:00Z",
+      "count": 112,
       "uniques": 2
     }
   ]
